src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Formatted_Address__c</fullName>
        <formula>IF(NOT(ISBLANK(MailingStreet)),     MailingStreet + &apos;, &apos;,       NULL) +
IF(NOT(ISBLANK(MailingCity)),       MailingCity + &apos;, &apos;,         NULL) +
IF(NOT(ISBLANK(MailingState)),      MailingState + &apos; &apos;,         NULL) +
IF(NOT(ISBLANK(MailingPostalCode)), MailingPostalCode + &apos;, &apos;,   NULL) +
IF(NOT(ISBLANK(MailingCountry)),    MailingCountry,             NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_URL__c</fullName>
        <label>Photo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Trailhead_Badges__c</fullName>
        <label>Total Trailhead Badges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <externalId>true</externalId>
        <label>UID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>